# inifile

./: .gitignore  .gitmodules  CMakeLists.txt
include/: inifile.h
test/: test_inifile.cpp
